# card2file

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml
database/craft_image/img_detect/: res_z6137342147676_442741eca5a85a279c22691daf8ddeee.txt
database/data_output/: ocr_output.csv
system_backend/: pyproject.toml
system_backend/src/: data_processing.py  entrypoint.sh  main.py  run_ocr.py
system_backend/src/crnn_infor/: run_crnn.py
system_backend/src/crnn_infor/src/utils/: config.py
system_backend/src/detect_infor/: run_craft.py
system_backend/src/detect_infor/src/craft_model/basenet/: vgg16_bn.py
system_backend/src/detect_infor/src/utils/: file_utils.py
system_backend/src/ocr/: predict.py  run_ocr.py  train.py
system_backend/src/ocr/loader/: dataloader.py
system_backend/src/ocr/model/: trainer.py  transformerocr.py
system_backend/src/ocr/model/backbone/: cnn.py  resnet.py  vgg.py
system_backend/src/ocr/model/seqmodel/: convseq2seq.py  seq2seq.py
system_backend/src/ocr/optim/: optim.py
system_backend/src/ocr/tool/: config.py  predictor.py  translate.py  utils.py
system_frontend/: pyproject.toml
system_frontend/src/: app.py  entrypoint.sh
